RESOLVED FIXED144714
Web Inspector: Docking Toolbar Buttons do not respect Docking Availability
https://bugs.webkit.org/show_bug.cgi?id=144714
Summary Web Inspector: Docking Toolbar Buttons do not respect Docking Availability
Joseph Pecoraro
Reported 2015-05-06 15:05:04 PDT
* SUMMARY Docking Toolbar Buttons do not respect Docking Availability. The backend knows if it should allow / disallow the frontend to attach based on the size of the inspected view. In the past, the window displayed/hid docking buttons depending on this state. With the new tab design, these dock buttons are toolbar buttons in the inspected page, and the inspected page is not updating accordingly. * STEPS TO REPRODUCE 1. Inspect a page 2. Undock the inspector 3. Resize the inspected page window to be very small => Docking buttons in the inspector do nothing. * EXPECTED Docking buttons in the inspector should be hidden / disabled when the backend determines docking is not allowed.
Attachments
[PATCH] Proposed Fix (7.58 KB, patch)
2015-05-06 15:09 PDT, Joseph Pecoraro
timothy: review+
Archive of layout-test-results from ews103 for mac-mavericks (674.75 KB, application/zip)
2015-05-06 15:40 PDT, Build Bot
no flags
[PATCH] For Landing (7.57 KB, patch)
2015-05-06 16:32 PDT, Joseph Pecoraro
buildbot: commit-queue-
Archive of layout-test-results from ews103 for mac-mavericks (734.48 KB, application/zip)
2015-05-06 17:07 PDT, Build Bot
no flags
[PATCH] For Landing (8.41 KB, patch)
2015-05-06 19:14 PDT, Joseph Pecoraro
no flags
Radar WebKit Bug Importer
Comment 1 2015-05-06 15:05:43 PDT
Joseph Pecoraro
Comment 2 2015-05-06 15:09:49 PDT
Created attachment 252524 [details] [PATCH] Proposed Fix
Joseph Pecoraro
Comment 3 2015-05-06 15:10:45 PDT
This hides the buttons, which makes sense for remote cases. We could alternately disable the buttons.
Build Bot
Comment 4 2015-05-06 15:40:42 PDT
Comment on attachment 252524 [details] [PATCH] Proposed Fix Attachment 252524 [details] did not pass mac-ews (mac): Output: http://webkit-queues.appspot.com/results/5787263740936192 New failing tests: inspector/model/parse-script-syntax-tree.html http/tests/inspector/css/bad-mime-type.html inspector/css/matched-style-properties.html inspector/protocol-promise-result.html inspector/event-listener.html inspector/console/console-api.html inspector/test-harness-trivially-works.html inspector/css/pseudo-element-matches.html inspector/css/selector-specificity.html inspector/event-listener-set.html
Build Bot
Comment 5 2015-05-06 15:40:45 PDT
Created attachment 252532 [details] Archive of layout-test-results from ews103 for mac-mavericks The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-mavericks Platform: Mac OS X 10.9.5
Joseph Pecoraro
Comment 6 2015-05-06 16:02:54 PDT
Interesting. Despite running these tests myself I didn't run into the issue. In any case, I'll throw the WebInspectorUI message into a (!m_underTest) block.
Joseph Pecoraro
Comment 7 2015-05-06 16:32:36 PDT
Created attachment 252536 [details] [PATCH] For Landing
Build Bot
Comment 8 2015-05-06 17:06:58 PDT
Comment on attachment 252536 [details] [PATCH] For Landing Attachment 252536 [details] did not pass mac-ews (mac): Output: http://webkit-queues.appspot.com/results/6610162294980608 New failing tests: inspector/model/parse-script-syntax-tree.html http/tests/inspector/css/bad-mime-type.html inspector/css/matched-style-properties.html inspector/console/console-api.html inspector/event-listener.html inspector/protocol-promise-result.html inspector/test-harness-trivially-works.html inspector/css/pseudo-element-matches.html inspector/css/selector-specificity.html inspector/event-listener-set.html
Build Bot
Comment 9 2015-05-06 17:07:06 PDT
Created attachment 252541 [details] Archive of layout-test-results from ews103 for mac-mavericks The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-mavericks Platform: Mac OS X 10.9.5
Joseph Pecoraro
Comment 10 2015-05-06 19:14:08 PDT
Created attachment 252555 [details] [PATCH] For Landing Heavier hammer. Stub in Test.js, which oddly enough the update dock side was already doing.
WebKit Commit Bot
Comment 11 2015-05-06 20:05:54 PDT
Comment on attachment 252555 [details] [PATCH] For Landing Clearing flags on attachment: 252555 Committed r183907: <http://trac.webkit.org/changeset/183907>
WebKit Commit Bot
Comment 12 2015-05-06 20:06:00 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.