Source/WebKit2/UIProcess/WebInspectorProxy.cpp
@@ -509,6 +509,8 @@ void WebInspectorProxy::createInspectorPage(IPC::Attachment connectionIdentifier
             }
         } else
             m_inspectorPage->process().send(Messages::WebInspectorUI::Detached(), m_inspectorPage->pageID());
+
+        m_inspectorPage->process().send(Messages::WebInspectorUI::SetDockingUnavailable(!m_canAttach), m_inspectorPage->pageID());
     }
 
     m_inspectorPage->loadRequest(URL(URL(), m_underTest ? inspectorTestPageURL() : inspectorPageURL()));
@@ -571,6 +573,9 @@ void WebInspectorProxy::attachAvailabilityChanged(bool available)
 
     if (previousCanAttach == m_canAttach)
         return;
+
+    if (!m_underTest)
+        m_inspectorPage->process().send(Messages::WebInspectorUI::SetDockingUnavailable(!m_canAttach), m_inspectorPage->pageID());
 
     platformAttachAvailabilityChanged(m_canAttach);
 }
